--- a/public/index.html
+++ b/public/index.html
@@ -95,16 +95,16 @@
                 </a>
                 <ul class="sub-menu">
                   <li>
-                    <a href="meet-ups.html">Meet ups</a>
+                    <a href="meet-ups.html">Meetups</a>
                   </li>
                   <li>
-                    <a href="conference.html">Conference</a>
+                    <a href="conference.html">Conferences</a>
                   </li>
                 </ul>
               </li>
               <li class="">
                 <a href="course.html">
-                  Course
+                  Courses
                 </a>
               </li>
               <li>
@@ -191,8 +191,7 @@
                     <svg class="second-decoration utouch-icon utouch-icon-arrow-left"><use xlink:href="#utouch-icon-arrow-left"></use></svg>
 
                   </h1>
-                  <h6 class="slider-content-text" data-swiper-parallax="-200">We believe that blockchain will do for business,
-                    what the internet did for communication.
+                  <h6 class="slider-content-text" data-swiper-parallax="-200">We believe blockchain will do for business and people, what the Internet did for communication.
                   </h6>
 
                   <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
@@ -228,8 +227,7 @@
                     <span class="c-primary">Blockchaingers</span>
                     is aimed at promoting blockchain technologies
                   </h2>
-                  <h6 class="slider-content-text" data-swiper-parallax="-200">Encouraging blockchain enthusiasts to learn
-                    about industry based blockchain interactions, appreciate new ideas etc.,
+                  <h6 class="slider-content-text" data-swiper-parallax="-200">We encourage blockchain enthusiasts to learn in-depth about decentralised technologies, appreciate new industry trends and to take a proactive approach in growing our community of innovators.
                   </h6>
 
                   <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
@@ -268,7 +266,7 @@
 
                   <h2 class="slider-content-title" data-swiper-parallax="-100">Rise Up With the Most Interesting Tech</h2>
 
-                  <h6 class="slider-content-text" data-swiper-parallax="-200">Blockchain is growing throughout the world and investments in blockchained based businesses has grown up to 67% this year. Why Wait?
+                  <h6 class="slider-content-text" data-swiper-parallax="-200">Blockchain is growing throughout the world and investments in blockchain based businesses has surpassed 67% this year alone. Why wait when you can get involved now?
                   </h6>
 
                   <div class="main-slider-btn-wrap" data-swiper-parallax="-300">
@@ -318,8 +316,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
           <div class="crumina-module crumina-heading">
             <h3 class="heading-title">Create your free account now and get immediate access to our club.</h3>
-            <div class="heading-text">We plan to host regular seminars, workshops and events on Blockchain
-              by connecting you to industry.
+            <div class="heading-text">We host regular podcasts, seminars, workshops and events on Blockchain technology by connecting you to industry experts, pioneers, academics and innovators.
             </div>
           </div>
         </div>
@@ -349,8 +346,7 @@
             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
               <div class="crumina-module crumina-heading">
                 <h2 class="heading-title">Subscribe to our newsletter</h2>
-                <p class="heading-text">Let's you to update yourself with the latest news and
-                  events in New Zealand
+                <p class="heading-text"Let us update you with the latest news and events around New Zealand
                 </p>
               </div>
 
@@ -379,8 +375,8 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12">
           <div class="crumina-module crumina-heading">
-            <h2 class="heading-title">Subscribe to <span class="c-primary">Blockchainers club</span> Podcast!</h2>
-            <p class="heading-text">Blockchain technology is about to transform every trust-based interaction of our lives, from financial services to identity, from health care to our Internet of Things devices. In this podcast, our host talks with industry pioneers across tech, financial services, health care, government and other sectors about how the blockchain and cryptocurrency will open up new opportunities for incumbents, startups and everyday people to interact more efficiently, directly and globally.
+            <h2 class="heading-title">Subscribe to the <span class="c-primary">Blockchainers club</span> Podcast!</h2>
+            <p class="heading-text">Blockchain technology is already transforming every aspect of our lives, where trustless interactions become the norm. From sovereign identities to autonomous vehicles, the rise of decentralised technologies and business models is potentially the most important innovation of our time. In this podcast, our hosts William Remor and Vishnu Devarajan bring you in-depth conversations with industry pioneers, experts, academics and entrepreneurs in technology, financial services, law, government and many other sectors on how blockchain technology will change our interaction with money, social media, businesses and with each other on a global scale.
             </p>
           </div>
           <img src="svg-icons/apple-48.png" style="margin-right: 10px">
@@ -423,9 +419,9 @@
             </div>
           </div>
 
-          <p>The purpose of Blockchaingers club is to actively facilitate understanding of blockchain technology through group discussion, organized events, and guest speakers.
-            BC-club serves to grow the understanding of blockchain technology and its potential and current impact on a global and personal scale.
-            BC-club aims to help members develop valuable connections in the blockchain space while encouraging members to pursue blockchain based interests, internships, and careers.
+          <p>The purpose of the Blockchaingers club is to actively facilitate the understanding of blockchain technology through group discussions, organised events and in-depth conversations with guest speakers to our shows.
+	     The Blochaingers club serves to grow the community of blockchaingers by bringing greater understanding of the disruptive power of decentralised technologies, distributed systems, cryptoassets and their potential for technological change on both a global and personal scale.
+	     We aim to help club members develop valuable connections in the burgeoning blockchain ecosystem while encouraging participants to pursue blockchain based interests, internships and careers.
           </p>
 
           <a href="02_company.html" class="learn-more">Learn more about Blockchaingers</a>
@@ -447,7 +443,7 @@
               <svg class="utouch-icon utouch-icon-arrow-right"><use xlink:href="#utouch-icon-arrow-right"></use></svg>
             </li>
             <li>
-              <a href="_products.html">Podcast</a>
+              <a href="_products.html">Podcasts</a>
               <svg class="utouch-icon utouch-icon-arrow-right"><use xlink:href="#utouch-icon-arrow-right"></use></svg>
             </li>
             <!--<li>-->
@@ -455,7 +451,7 @@
             <!--<svg class="utouch-icon utouch-icon-arrow-right"><use xlink:href="#utouch-icon-arrow-right"></use></svg>-->
             <!--</li>-->
             <li>
-              <a href="_pricing_tables.html">Testimonial</a>
+              <a href="_pricing_tables.html">Testimonials</a>
               <svg class="utouch-icon utouch-icon-arrow-right"><use xlink:href="#utouch-icon-arrow-right"></use></svg>
             </li>
             <li>
